--- a/wezdrexpress/.settings/org.eclipse.wst.common.component
+++ b/wezdrexpress/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="w_01-1.0.0">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/app_web" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <wb-resource deploy-path="/" source-path="/target/wezdrexpress-1.0.0"/>
-        <property name="java-output-path" value="/w_01/target/classes"/>
+        <property name="java-output-path" value="/w_01/build/classes"/>
         <property name="context-root" value="wezdrexpress"/>
     </wb-module>
 </project-modules>
