--- a/wezdrexpress/app_web/view/loginView.xhtml
+++ b/wezdrexpress/app_web/view/loginView.xhtml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html  xmlns="http://www.w3.org/1999/xhtml">
 <head>
-
-<title>Insert title here</title>
-
-<script >
-
-window.location='home.jsp';
-</script>
+<title>#{build.TITULO_APP}</title>
 </head>
 <body>
-<p>&nbsp;</p>
-
+<h1>LoginView</h1>
 </body>
 </html>
