--- a/wezdrexpress/app_web/view/homeView.xhtml
+++ b/wezdrexpress/app_web/view/homeView.xhtml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html  xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:rpx="http://java.sun.com/jsf/composite/componentes">
 <head>
 <title>#{build.TITULO_APP}</title>
 </head>
 <body>
+	<rpx:barraComponet labelTitulo="Home" colorText="" colorBar="#7EB4F7" />
+
 
 </body>
 </html>
