--- a/wezdrexpress/app_web/view/loginView.xhtml
+++ b/wezdrexpress/app_web/view/loginView.xhtml
@@ -1,10 +1,22 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html  xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:rpx="http://java.sun.com/jsf/composite/componentes">
 <head>
 <title>#{build.TITULO_APP}</title>
+<style type="text/css">
+</style>
 </head>
 <body>
-<h1>LoginView</h1>
+    <rpx:barraComponet labelTitulo="Login" colorText="" colorBar="#7EB4F7" />
+	<rpx:loginComponet passNameLabel="#{build.label_password}"
+		correoNameLabel="#{build.label_correo}"
+		botonNameLabel="#{build.btn_login}" correoValue="#{loginBean.correo}"
+		passValue="#{loginBean.password}"
+		botonAction="#{loginContoller.aceptar}" />
 </body>
 </html>
