--- a/wezdrexpress/app_web/view/homeView.xhtml
+++ b/wezdrexpress/app_web/view/homeView.xhtml
@@ -4,13 +4,12 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:rpx="http://java.sun.com/jsf/composite/componentes">
-<head>
+	xmlns:rpx="http://java.sun.com/jsf/composite/componentes"
+	xmlns:t="http://java.sun.com/jsp/jstl/core">
+<h:head>
 <title>#{build.TITULO_APP}</title>
-</head>
-<body>
-	<rpx:barraComponet labelTitulo="Home" colorText="" colorBar="#7EB4F7" />
-
-
-</body>
+</h:head>
+<h:body>
+	<rpx:barraComponet labelTitulo="Home" colorText="" colorBar="#7EB4F7" />s
+</h:body>
 </html>
