--- a/wezdrexpress/app_web/view/homeView.xhtml
+++ b/wezdrexpress/app_web/view/homeView.xhtml
@@ -7,9 +7,21 @@
 	xmlns:rpx="http://java.sun.com/jsf/composite/componentes"
 	xmlns:t="http://java.sun.com/jsp/jstl/core">
 <h:head>
-<title>#{build.TITULO_APP}</title>
+	<title>#{build.TITULO_APP}</title>
 </h:head>
 <h:body>
-	<rpx:barraComponet labelTitulo="Home" colorText="" colorBar="#7EB4F7" />s
+	<rpx:barraComponet labelTitulo="Home" colorText="" colorBar="#7EB4F7" />
+	<h:panelGrid></h:panelGrid>
+	<h:form>
+		<h:panelGrid columns="2" border="1" captionStyle="width:100%">
+			<h:panelGroup>
+
+				<h:commandLink value="#{build.alta_usuario}" rendered="false" />
+			</h:panelGroup>
+			<h:panelGroup>
+				<h:commandLink value="#{build.alta_usuario}" rendered="true" />
+			</h:panelGroup>
+		</h:panelGrid>
+	</h:form>
 </h:body>
 </html>
