--- a/wezdrexpress/app_web/view/homeView.xhtml
+++ b/wezdrexpress/app_web/view/homeView.xhtml
@@ -8,15 +8,15 @@
 	xmlns:t="http://java.sun.com/jsp/jstl/core">
 <h:head>
 	<title>#{build.TITULO_APP}</title>
+	<h:outputStylesheet name="loginstyle.css" library="css"></h:outputStylesheet>
+
 </h:head>
 <h:body>
-	<rpx:barraComponet labelTitulo="Home" colorText="" colorBar="#7EB4F7" />
-	<h:panelGrid></h:panelGrid>
 	<h:form>
-		<h:panelGrid columns="2" border="1" captionStyle="width:100%">
+		<h:panelGrid columns="1" styleClass="panel">
+			<rpx:barraComponet labelTitulo="#{build.titulo_home}" />
 			<h:panelGroup>
-
-				<h:commandLink value="#{build.alta_usuario}" rendered="false" />
+				<h:commandLink value="#{build.alta_usuario}" rendered="true" />
 			</h:panelGroup>
 			<h:panelGroup>
 				<h:commandLink value="#{build.alta_usuario}" rendered="true" />
